# schedule

./: .gitignore  README.md  pyproject.toml  pytest.ini
apps/schedule/: data_types.py  serializers.py  services.py  urls.py  validators.py  views.py
config/: settings.py  urls.py
tests/test_apps/test_schedule/: test_serializers.py  test_services.py
